--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-searcher",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Terminal searcher/cloner of Github repositories",
   "main": "index.js",
   "keywords": [
@@ -29,5 +29,9 @@
     "github": "^9.3.1",
     "inquirer": "^3.2.2",
     "ora": "^1.3.0"
+  },
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/caiofsouza/GitHub-Searcher"
   }
 }
